# lvgl_learning

./: .gitignore  read_me.txt
app/: CMakeLists.txt
app/src/: main.c  main.cpp
app/src/lib/: driver_backends.c  mouse_cursor_icon.c
app/src/lib/display_backends/: sdl.c
app/src/lib/indev_backends/: evdev.c
lib/: CMakeLists.txt
lib/PageManager/: CMakeLists.txt  PM_Drag.cpp  PageBase.cpp  PageBase.h  PageManager.h
